<resources>
    <string name="app_name">Ninos Adventure</string>
    <string name="bus">bus1</string>
    <string name="busImg">busImg</string>
    <string name="refreshbutton">refreshbutton</string>
    <string name="carview">carview</string>
    <string name="text" />
    <string name="loadbutton">LOAD GAME</string>
    <string name="savebutton" />
    <string name="homebutton" />
    <string name="v" />
    <string name="trainHome" />
    <string name="trainSave" />
    <string name="loadhome" />
    <string name="text10" />
    <string name="text11" />
    <string name="t1" />
    <string name="t2" />
    <string name="t3" />
    <string name="t4" />
    <string name="t5" />
    <string name="t6" />
    <string name="laddar" />
</resources>
